# luci-app-photondns

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  build.rs  deploy.sh  run_standalone.sh  test_dns.sh  update_photondns.sh
.github/workflows/: release.yml
bench/: .gitignore  ab.sh  linbench.sh  miss_final.sh  miss_latency.sh  optimization.md  probe.sh  run.sh  stub_experiment.sh  stubdns.go  stubdns_hard.go  summarize.py  summary.md  verify_workflow.js
openwrt/luci-app-photondns/: Makefile
openwrt/luci-app-photondns-compat/: Makefile
openwrt/luci-app-photondns-compat/root/etc/uci-defaults/: 40_luci-photondns-compat
openwrt/luci-app-photondns-compat/root/usr/lib/lua/luci/controller/: photondns.lua
openwrt/luci-app-photondns-compat/root/usr/lib/lua/luci/model/cbi/photondns/: basic.lua  rules.lua
openwrt/luci-app-photondns-compat/root/usr/lib/lua/luci/view/photondns/: checker.htm  chinalist.htm  help.htm  logs.htm  querylog.htm  status.htm  status_bar.htm
openwrt/luci-app-photondns-compat/root/usr/share/rpcd/acl.d/: luci-app-photondns-compat.json
openwrt/luci-app-photondns/htdocs/luci-static/resources/view/photondns/: basic.js  checker.js  chinalist.js  help.js  logs.js  querylog.js  rules.js  status.js
openwrt/luci-app-photondns/po/templates/: photondns.pot
openwrt/luci-app-photondns/po/zh_Hans/: photondns.po
openwrt/luci-app-photondns/root/etc/config/: photondns
openwrt/luci-app-photondns/root/etc/init.d/: photondns
openwrt/luci-app-photondns/root/etc/uci-defaults/: 40_luci-photondns
openwrt/luci-app-photondns/root/usr/share/luci/menu.d/: luci-app-photondns.json
openwrt/luci-app-photondns/root/usr/share/rpcd/acl.d/: luci-app-photondns.json
openwrt/luci-app-photondns/root/usr/share/rpcd/ucode/: luci.photondns
openwrt/luci-app-photondns/root/usr/share/ucitrack/: luci-app-photondns.json
openwrt/photondns/: Makefile
openwrt/photondns/root/etc/config/: photondns
openwrt/photondns/root/etc/init.d/: photondns
openwrt/photondns/root/etc/uci-defaults/: 40_photondns
packaging/: build-packages.sh  mkapk.sh  mkipk.sh
src/: api.rs  cache.rs  config.rs  dns.rs  doh.rs  group.rs  health.rs  lan.rs  logger.rs  main.rs  qlog.rs  router.rs  server.rs  stats.rs  upstream.rs
tools/: compare-dns.py  po2lmo.py  resolve-test.html  tricky-tests.sh
